fix wrapping of text

--- a/src/Feed.css
+++ b/src/Feed.css
@@ -3,7 +3,6 @@
   border-right: 1px solid var(--twitter-background);
   min-width: fit-content;
   overflow-y: scroll;
-  overflow-wrap: break-word;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -28,5 +27,5 @@
 
 .feed__header > h2 {
   font-size: 20px;
-  font-weight: 800;
+  font-weight: 800
 }
